# slicker-svn

atuin/branches/cmake-transition/: CMakeLists.txt  DEVELOPERS  FindKDE.cmake  INSTALL.SVN.ATUIN  README.DEVELOPERS
atuin/branches/cmake-transition/base/: CMakeLists.txt  cardstack.h  edgewidgetmanager.cpp  pluginmanager.h  pluginprefs.cpp  sessionmanager.cpp
atuin/branches/cmake-transition/plugins/: CMakeLists.txt
atuin/branches/cmake-transition/plugins/applets/: CMakeLists.txt
atuin/branches/cmake-transition/plugins/applets/clock/: clockapplet.cpp  slicker_clock.desktop  slicker_clock_config.desktop
atuin/branches/cmake-transition/plugins/applets/launcher/: launcherapplet.h  launcherbutton.cpp
atuin/branches/cmake-transition/plugins/gpps/: CMakeLists.txt
atuin/branches/cmake-transition/plugins/gpps/testplugin/: CMakeLists.txt  slicker_testplugin_config.desktop  testplugin.cpp  testpluginprefs.cpp  testpluginprefs.h
atuin/branches/cmake-transition/share/: CMakeLists.txt  applet.cpp  appletdef.h  applethost.cpp  applethostmenu.h  edgewidget.cpp  plugin.cpp  sessionappletdef.cpp  sessionappletdef.h
atuin/branches/cmake-transition/templates/: h
atuin/trunk/: AUTHORS  DEVELOPERS  Makefile.am.in  (+6 more)
atuin/trunk/base/: Makefile.am  appletmanager.cpp  appletmanager.h  cardstack.cpp  cardstack.h  edgewidgetmanager.cpp  edgewidgetmanager.h  pluginmanager.cpp  pluginmanager.h  pluginprefs.cpp  pluginprefs.h  sessionmanager.cpp  sessionmanager.h  slicker.cpp  slicker.desktop  slicker.h  slider.cpp  slider.h
atuin/trunk/plugins/applets/clock/: Makefile.am  clock.cpp  clock.h  clockapplet.cpp  clockapplet.h  clockpluginprefs.cpp  clockpluginprefs.h
atuin/trunk/plugins/applets/launcher/: Makefile.am  launcherapplet.cpp  launcherapplet.h  launcherbutton.cpp  launcherbutton.h  launcherplugin.cpp  launcherplugin.h  launcherpluginprefs.cpp  launcherpluginprefs.h  slicker_launcherplugin.desktop  slicker_launcherplugin_config.desktop
atuin/trunk/plugins/gpps/testplugin/: Makefile.am  testplugin.cpp  testplugin.h
atuin/trunk/share/: Makefile.am  applet.cpp  applet.h  appletdef.cpp  appletdef.h  applethost.cpp  applethost.h  edgewidget.cpp  edgewidget.h  edgewidgethelpers.cpp  edgewidgethelpers.h  plugin.cpp  plugin.h  pluginprefspage.cpp  pluginprefspage.h  sessionapplet.cpp  sessionapplet.h  sessionappletdef.cpp  sessionappletdef.h  sessionitem.cpp  sessionitem.h  sessionitemfactory.cpp  sessionitemfactory.h
legacy/: AUTHORS  Makefile.am.in  README.developers  configure.in.in  slicker.spec.in
legacy/slicker/: Makefile.am
legacy/slicker/applets/: Makefile.am
legacy/slicker/applets/cards/: Makefile.am
legacy/slicker/applets/cards/clockcard/: Makefile.am  clock.cpp  clock.h  clockapplet.desktop  conf.ui  datepicker.cpp  datepicker.h  settings.cpp  settings.h
legacy/slicker/applets/cards/imapplet/: IMApplet.cpp  IMApplet.h  Makefile.am  README  TODO  imapplet.desktop
legacy/slicker/applets/cards/informationcenter/: Makefile.am  baseinfo.cpp  baseinfo.h  configdialog.ui  configdialog_impl.cpp  configdialog_impl.h  diskinfo.cpp  diskinfo.h  disklist.cpp  getinfo.cpp  getinfo.h  informationcenterapplet.cpp  informationcenterapplet.desktop  informationcenterapplet.h  informationcenterwidget.cpp  informationcenterwidget.h  plugin.cpp
legacy/slicker/applets/cards/kmenuapplet/: Makefile.am  kmenuapplet.cpp  kmenuapplet.desktop  kmenuapplet.h  kmenutab.cpp  kmenutab.h  service_mnu.h  slickerkmenu.cpp  slickerkmenu.h
legacy/slicker/applets/cards/konsoleapplet/: KonsoleApplet.cpp  KonsoleApplet.h  Makefile.am  konsoleapplet.desktop  plugin.cpp
legacy/slicker/applets/cards/launcherapplet/: Makefile.am  kdiconview.cc  kdiconview.h  krootwm.cc  krootwm.h  launcher.cpp  launcher.h  launchercardapplet.cpp  launchercardapplet.desktop  launchercardapplet.h  plugin.cpp
legacy/slicker/applets/cards/printerjobsapplet/: Makefile.am  PrinterJobsApplet.cpp  PrinterJobsApplet.h  plugin.cpp  printerjobsapplet.desktop
legacy/slicker/applets/cards/systemtray/: Makefile.am  TODO  configure_impl.cpp  configure_impl.h  configure_ui.ui  contentswidget.cpp  contentswidget.h  plugin.cpp  systemtray.cpp  systemtray.h  systemtrayapplet.desktop  systemtraywidget.cpp  systemtraywidget.h
legacy/slicker/applets/cards/testapplet/: Makefile.am  TestCardApplet.cpp  TestCardApplet.h  plugin.cpp  testcardapplet.desktop
legacy/slicker/applets/cards/traytestapplet/: Makefile.am  TrayTestApplet.cpp  TrayTestApplet.h  plugin.cpp  traytestapplet.desktop
legacy/slicker/applets/cards/xembedapplet/: Makefile.am  XEmbedCardApplet.cpp  XEmbedCardApplet.h  plugin.cpp  xembedcardapplet.desktop
legacy/slicker/carddeskcore/: Card.cpp  Card.h  CardApplet.cpp  CardApplet.h  CardElements.cpp  CardElements.h  CardManager.cpp  CardManager.h  Const.cpp  Const.h  Deck.cpp  Deck.h  DragLogic.cpp  LayoutSwitcher.cpp  LayoutSwitcher.h  Makefile.am  README
legacy/slicker/cardhandler/: CardHandlerPreferences.cpp  CardHandlerPreferences.h  CardHandlerPreferencesUI.ui  Makefile.am  TestGui.cpp  TestGui.h  cardhandler.cpp  cardhandler.h  manager.cpp  manager.h  newcarddialog.cpp  newcarddialog.h  pluginlistbox.cpp  pluginlistbox.h
legacy/slicker/core/: ConfigModule.cpp  ConfigModule.h  Makefile.am  PreferencesDialog.cpp  PreferencesDialog.h  SlickerPreferences.cpp  SlickerPreferences.h  SlickerPreferencesUI.ui  main.cpp  pluginmanager.cpp  pluginmanager.h  slicker.cpp  slicker.h
legacy/slicker/share/: Makefile.am  edgewidget.cpp  edgewidget.h  edgewidgethelpers.cpp  edgewidgethelpers.h  edgewidgetmanager.cpp  edgewidgetmanager.h  plugininfo.cpp  plugininfo.h  pluginloader.cpp  pluginloader.h
legacy/slicker/share/test/: Makefile.am  edgetest.cpp  edgetest.h
legacy/slicker/slider/: Makefile.am  README  slider.cpp  slider.h
legacy/slicker/taskbar/: Makefile.am  README  preferences.cpp  preferences.h  preferencesUI.ui  preferencesUIorg.ui  taskbar.cpp  taskbar.h  taskbarsection.cpp  taskbarsection.h  taskbarview.cpp  taskbarview.h
legacy/slicker/taskbar/taskmanager/: Makefile.am  taskmanager.cpp  taskmanager.h
(+28 files in other folders)
