INCLUDES = $(all_includes)

noinst_LTLIBRARIES = libslicker_tbm.la
libslicker_tbm_la_SOURCES = taskmanager.cpp taskrmbmenu.cpp

libslicker_tbm_la_LDFLAGS = -no-undefined $(all_libraries)
libslicker_tbm_la_LIBADD =  $(LIB_KDEUI) $(LIB_KICKER)
libslicker_tbm_la_METASOURCES = AUTO

noinst_HEADERS = tasklmbmenu.h taskmanager.h taskrmbmenu.h
